finished fisrt skeleton layout

--- a/index.html
+++ b/index.html
@@ -111,10 +111,127 @@
                 </div>
 
                 <h3>sponsors</h3>
+                <div id="social">
+                   
+                </div>
              </aside>
              <!-- End aside -->
+
+             <!-- Start articles -->
+             <section id="articles">
+                <h2>Lastest articles</h2>
+                <div class="clearfix"></div>
+                <article>
+                    <div class="data">
+                        <span>Category: Test</span>
+                        <span>Date: Dec 12</span>
+                    </div>
+                    <h4>
+                        <a href="">Title article</a>
+                    </h4>
+                    <p>
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. A saepe ipsam excepturi ratione nam doloribus. Quaerat repellat voluptatem placeat possimus qui fuga dolor. Nihil, quaerat nostrum perferendis similique temporibus adipisci?
+                    </p>
+                </article>
+                <article>
+                    <div class="data">
+                        <span>Category: Test</span>
+                        <span>Date: Dec 12</span>
+                    </div>
+                    <h4>
+                        <a href="">Title article</a>
+                    </h4>
+                    <p>
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. A saepe ipsam excepturi ratione nam doloribus. Quaerat repellat voluptatem placeat possimus qui fuga dolor. Nihil, quaerat nostrum perferendis similique temporibus adipisci?
+                    </p>
+                </article>
+                <article>
+                    <div class="data">
+                        <span>Category: Test</span>
+                        <span>Date: Dec 12</span>
+                    </div>
+                    <h4>
+                        <a href="">Title article</a>
+                    </h4>
+                    <p>
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. A saepe ipsam excepturi ratione nam doloribus. Quaerat repellat voluptatem placeat possimus qui fuga dolor. Nihil, quaerat nostrum perferendis similique temporibus adipisci?
+                    </p>
+                </article>
+                <article>
+                    <div class="data">
+                        <span>Category: Test</span>
+                        <span>Date: Dec 12</span>
+                    </div>
+                    <h4>
+                        <a href="">Title article</a>
+                    </h4>
+                    <p>
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. A saepe ipsam excepturi ratione nam doloribus. Quaerat repellat voluptatem placeat possimus qui fuga dolor. Nihil, quaerat nostrum perferendis similique temporibus adipisci?
+                    </p>
+                </article>
+                <article>
+                    <div class="data">
+                        <span>Category: Test</span>
+                        <span>Date: Dec 12</span>
+                    </div>
+                    <h4>
+                        <a href="">Title article</a>
+                    </h4>
+                    <p>
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. A saepe ipsam excepturi ratione nam doloribus. Quaerat repellat voluptatem placeat possimus qui fuga dolor. Nihil, quaerat nostrum perferendis similique temporibus adipisci?
+                    </p>
+                </article>
+                <article id="blog">
+                    <a href="">Go blog</a>
+                </article>
+             </section>
+             <!-- End articles -->
         </section>
     </section>
+
+    <div class="clearfix"></div>
+
+    <!--Start footer -->
+    <footer>
+        <div class="wrap">           
+                <nav id="nav-footer">
+                    <h5>Menu</h5>
+                    <ul>
+                        <li><a href="">Home</a></li>
+                        <li><a href="">Training</a></li>
+                        <li><a href="">Blog</a></li>
+                        <li><a href="">Contact</a></li>
+                    </ul>
+                </nav>
+            
+                <div id="location">
+                    <h5>Location</h5>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13564.113498804752!2d-65.01369982809574!3d-31.79697661304598!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x942d2f535d267349%3A0x9e1e7f01a046e8a9!2sNono%2C%20Cordoba!5e0!3m2!1sen!2sar!4v1659970162949!5m2!1sen!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+
+                <div id="info">
+                    <h5>Development width</h5>
+                    <p>
+                        <img src="./img/html5-badge-h-css3-graphics-multimedia-performance-semantics.png" alt="">
+                    </p>
+                    <h5>optimized for</h5>
+                    <p id="browsers">
+                        <a href="">
+                            <img src="./img/firefox-icon.png" alt="">
+                            <img src="./img/chrome.png" alt="">
+                            <img src="./img/Opera_256x256.png" alt="">
+                            <img src="./img/safari.png" alt="">
+                            <img src="./img/android.png" alt="">
+                            <img src="./img/ios.png" alt="">
+                        </a>
+                    </p>
+                    <h5>Author</h5>
+                    <p>&copy; Yamil Zavala</p>
+                </div>
+
+        </div>
+    </footer>
+    <!--End footer -->
    
 </body>
 </html>
