adding responsive 1250 break point

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/svg" href="img/diamont.svg">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/responsive.css">
     <title>Document</title>
 </head>
 <body>
@@ -70,6 +71,7 @@
             </div>
              <!--End cards -->
 
+             <div class="clearfix"></div>
              <!-- Start aside -->
              <aside id="aside">
                 <h3>search</h3>
